Copyright (c) 2002-2006 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes

  1.5

    Bugs fixed

      - Container policies are not hardcoded anymore for container add
        forms (add folder or add publication). Instead, the
        information on what container policies are available is
        retrieved from the service where they are registered.

      - A lot more places where i18n interpolation wasn't taking place
        anymore (${foo} in message texts) are fixed by using an 
        explicit call to zope.i18n.translate() instead of unicode().

      - Restore "install default layout" functionality for ZODB
        layout; we were too vigorous in removing layout related code
        and removed too much.

      - Removed some more traces of FileSystemSite-based layout system.

      - Some fixes in the refactored lookup window code.

      - Some cleanups of GhostFolder code, fixing an error that
        appeared when Five views interacted with them.

      - Fix in Ghost code stops another error related to Five view
        interaction with acquisition.

      - Eliminated Zope 2.8.5 warnings on startup.

      - Access screen can be accessed again by authors.
 
      - Slight simplification of icon generation code which in some
        circumstances gave rise to a bug.

      - get_layout_macro was stored with DOS line endings, switched
        to Unix to be in line with the rest of the source code.

      - Further bugfixes in Kupu and Kupu integration, includes Kupu
        1.3.5.

    Features added

      - Already available in beta 1, but not in our HISTORY.txt
        file. Buttons have been added to the UI to publish and close
        content more directly.

      - Added the newest translations from the Launchpad Rosetta system.
        (https://launchpad.net/products/silva/+translations)

  1.5b1

    Features added

      - Changed over Silva so it works with Zope 2.8/Five/Zope 3